package com.zzaip.monopoly.communication.game_room;

public class GameRoomServiceImpl {
}
