package com.zzaip.monopoly.communication.inbound;

public class InboundCommunicationController {
}
