package com.zzaip.monopoly.communication.inbound;

public class InboundCommunicationServiceImpl {
}
