package com.zzaip.monopoly.communication.outbound;

public class ExternalApiConsumer {
}
